--- a/modules/recipes/client/views/recipes.protein.html
+++ b/modules/recipes/client/views/recipes.protein.html
@@ -16,7 +16,7 @@
       <p>More than </p> <input ng-model="vm.filters.protein.moreThan" type="number" placeholder="grams of protein">
     </div>
     <div class="row col-xs-12 gram-input">
-      <p>Less than </p> <input ng-model="vm.filters.protein.lessThat" type="number" placeholder="grams of protein">
+      <p>Less than </p> <input ng-model="vm.filters.protein.lessThan" type="number" placeholder="grams of protein">
     </div>
     <div class=center><a href="/recipes/fat" class="btn btn-outline btn-xl js-scroll-trigger">Next</a></div>
   </div>
