--- a/modules/recipes/client/views/recipes.protein.html
+++ b/modules/recipes/client/views/recipes.protein.html
@@ -11,7 +11,7 @@
   <!-- Protein -->
   <div ng-if="vm.visible" class="col-xs-12">
     <h3 class="text-align-center bold">Protein</h3>
-    <p>The final smoothie, with all ingredients, will include:</p>
+    <p class="text-align-center">The final smoothie, with all ingredients, will include:</p>
     <div class="row col-xs-12 gram-input">
       <p>More than </p> <input ng-model="vm.filters.protein.moreThan" type="number" placeholder="grams of protein">
     </div>
